==> mahdi-shahmari/stm32h750-greenhouse-master/MFile/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "delay.h"
#include "stdlib.h"
#include "math.h"
#include "gui.h"
#include "qspi_w25q64.h"
#define TP_CALIB_FLASH_ADDR   0x7FF000UL   /* last 4K sector of the 8MB chip */
#define TP_CALIB_MAGIC        0xA5         /* marks "valid calibration present" */

void TP_Write_Byte(u8 num)    
{  
  u8 count=0;   
  for(count=0;count<8;count++)  
  { 	  
    if(num&0x80)TDIN(1);  
    else TDIN(0);   
    num<<=1;    
    TCLK(0); 
    delay_us(1);
    TCLK(1);		//Active on rising edge	        
  }		 			    
}

u16 TP_Read_AD(u8 CMD)	  
{ 	 
  u8 count=0; 	  
  u16 Num=0; 
  TCLK(0);		//First pull down the clock 	 
  TDIN(0); 	//Pull down the data line
  TCS(0); 		//Select the touch screen IC
  TP_Write_Byte(CMD);//Send command word
  delay_us(6);//The longest conversion time of ADS7846 is 6us
  TCLK(0); 	     	    
  delay_us(1);    	   
  TCLK(1);		//Give 1 clock, clear BUSY
  delay_us(1);    
  TCLK(0); 	     	    
  for(count=0;count<16;count++)//Read 16-bit data, only the upper 12 bits are valid 
  { 				  
    Num<<=1; 	 
    TCLK(0);	//Active on falling edge  	    	   
    delay_us(1);    
    TCLK(1);
    if(DOUT)Num++; 		 
  }  	
  Num>>=4;   	//Only the upper 12 bits are valid.
  TCS(1);		//Release selection	 
  return(Num);  
  //#endif
}

void TP_Save_Adjdata(void)
{
    TP_CalibData_t calib;
    calib.xfac      = tp_dev.xfac;
    calib.yfac      = tp_dev.yfac;
    calib.xoff      = (int16_t)tp_dev.xoff;
    calib.yoff      = (int16_t)tp_dev.yoff;
    calib.touchtype = tp_dev.touchtype;
    calib.magic     = TP_CALIB_MAGIC;

    HAL_QSPI_Abort(&hqspi);                          /* ensure indirect mode */
    QSPI_W25Qxx_SectorErase(TP_CALIB_FLASH_ADDR);     /* must erase before write */
    QSPI_W25Qxx_WriteBuffer((uint8_t*)&calib, TP_CALIB_FLASH_ADDR, sizeof(calib));
    QSPI_W25Qxx_MemoryMappedMode();  
}

u8 TP_Get_Adjdata(void)
{
   TP_CalibData_t calib;

    HAL_QSPI_Abort(&hqspi);
    QSPI_W25Qxx_ReadBuffer((uint8_t*)&calib, TP_CALIB_FLASH_ADDR, sizeof(calib));

    if (calib.magic == TP_CALIB_MAGIC)
    {
        tp_dev.xfac      = calib.xfac;
        tp_dev.yfac      = calib.yfac;
        tp_dev.xoff      = calib.xoff;
        tp_dev.yoff      = calib.yoff;
        tp_dev.touchtype = calib.touchtype;

        if (tp_dev.touchtype) { CMD_RDX = 0X90; CMD_RDY = 0XD0; }
        else                  { CMD_RDX = 0XD0; CMD_RDY = 0X90; }

        return 1;
    }
    return 0;   /* erased flash reads as 0xFF, so magic won't match ? recalibrate */
0;
}

void TP_Adjust(void)
{								 
  u16 pos_temp[4][2];//Coordinate cache value
  u8  cnt=0;	
  u16 d1,d2;
  u32 tem1,tem2;
  double fac; 	
  u16 outtime=0;
  cnt=0;				
  POINT_COLOR=BLUE;
  BACK_COLOR =WHITE;
  LCD_Clear(WHITE);//Clear screen   
  POINT_COLOR=RED;//red 
  LCD_Clear(WHITE);//Clear screen 	   
  POINT_COLOR=BLACK;
//  LCD_ShowString(10,40,16,"Please use the stylus click",1);//Show message
//  LCD_ShowString(10,56,16,"the cross on the screen.",1);//Show message
//  LCD_ShowString(10,72,16,"The cross will always move",1);//Show message
//  LCD_ShowString(10,88,16,"until the screen adjustment",1);//Show message
//  LCD_ShowString(10,104,16,"is completed.",1);//Show message
  
  TP_Drow_Touch_Point(20,20,RED);//Plot 1 
  tp_dev.sta=0;//Eliminate the trigger signal 
  tp_dev.xfac=0;//xfac is used to mark whether it has been calibrated, so it must be cleared before calibration! to avoid errors	 
  while(1)//If it is not pressed for 10 seconds, it will automatically exit
  {
    tp_dev.scan(1);//Scan physical coordinates
    if((tp_dev.sta&0xc0)==TP_CATH_PRES)//The button is pressed once (the button is now released.)
    {	
      outtime=0;		
      tp_dev.sta&=~(1<<6);//The mark button has been processed.
      
      pos_temp[cnt][0]=tp_dev.x;
      pos_temp[cnt][1]=tp_dev.y;
      cnt++;	  
      switch(cnt)
      {			   
      case 1:						 
        TP_Drow_Touch_Point(20,20,WHITE);				//Clear point 1 
        TP_Drow_Touch_Point(lcddev.width-20,20,RED);	//Plot 2
        break;
      case 2:
        TP_Drow_Touch_Point(lcddev.width-20,20,WHITE);	//Clear point 2
        TP_Drow_Touch_Point(20,lcddev.height-20,RED);	//Plot 3
        break;
      case 3:
        TP_Drow_Touch_Point(20,lcddev.height-20,WHITE);			//Clear point 3
        TP_Drow_Touch_Point(lcddev.width-20,lcddev.height-20,RED);	//Plot 4
        break;
      case 4:	 //All four points have been obtained
        //Equal opposite sides
        tem1=abs(pos_temp[0][0]-pos_temp[1][0]);//x1-x2
        tem2=abs(pos_temp[0][1]-pos_temp[1][1]);//y1-y2
        tem1*=tem1;
        tem2*=tem2;
        d1=sqrt(tem1+tem2);//Get the distance of 1,2
        
        tem1=abs(pos_temp[2][0]-pos_temp[3][0]);//x3-x4
        tem2=abs(pos_temp[2][1]-pos_temp[3][1]);//y3-y4
        tem1*=tem1;
        tem2*=tem2;
        d2=sqrt(tem1+tem2);//Get the distance of 3,4
        fac=(float)d1/d2;
        if(fac<0.95||fac>1.05||d1==0||d2==0)//Unqualified
        {
          cnt=0;
          TP_Drow_Touch_Point(lcddev.width-20,lcddev.height-20,WHITE);	//Clear point 4
          TP_Drow_Touch_Point(20,20,RED);								//Plot 1
          TP_Adj_Info_Show(pos_temp[0][0],pos_temp[0][1],pos_temp[1][0],pos_temp[1][1],pos_temp[2][0],pos_temp[2][1],pos_temp[3][0],pos_temp[3][1],fac*100);//Display Data   
          continue;
        }
        tem1=abs(pos_temp[0][0]-pos_temp[2][0]);//x1-x3
        tem2=abs(pos_temp[0][1]-pos_temp[2][1]);//y1-y3
        tem1*=tem1;
        tem2*=tem2;
        d1=sqrt(tem1+tem2);//Get the distance of 1,3
        
        tem1=abs(pos_temp[1][0]-pos_temp[3][0]);//x2-x4
        tem2=abs(pos_temp[1][1]-pos_temp[3][1]);//y2-y4
        tem1*=tem1;
        tem2*=tem2;
        d2=sqrt(tem1+tem2);//Get the distance of 2,4
        fac=(float)d1/d2;
        if(fac<0.95||fac>1.05)//Unqualified
        {
          cnt=0;
          TP_Drow_Touch_Point(lcddev.width-20,lcddev.height-20,WHITE);	//Clear point 4
          TP_Drow_Touch_Point(20,20,RED);								//Plot 1
          TP_Adj_Info_Show(pos_temp[0][0],pos_temp[0][1],pos_temp[1][0],pos_temp[1][1],pos_temp[2][0],pos_temp[2][1],pos_temp[3][0],pos_temp[3][1],fac*100);//Display Data   
          continue;
        }//Correct
        
        //Diagonal equal
        tem1=abs(pos_temp[1][0]-pos_temp[2][0]);//x1-x3
        tem2=abs(pos_temp[1][1]-pos_temp[2][1]);//y1-y3
        tem1*=tem1;
        tem2*=tem2;
        d1=sqrt(tem1+tem2);//Get a distance of 1,4
	
        tem1=abs(pos_temp[0][0]-pos_temp[3][0]);//x2-x4
        tem2=abs(pos_temp[0][1]-pos_temp[3][1]);//y2-y4
        tem1*=tem1;
        tem2*=tem2;
        d2=sqrt(tem1+tem2);//Get the distance of 2,3
        fac=(float)d1/d2;
        if(fac<0.95||fac>1.05)//Unqualified
        {
          cnt=0;
          TP_Drow_Touch_Point(lcddev.width-20,lcddev.height-20,WHITE);	//Clear point 4
          TP_Drow_Touch_Point(20,20,RED);								//Plot 1
          TP_Adj_Info_Show(pos_temp[0][0],pos_temp[0][1],pos_temp[1][0],pos_temp[1][1],pos_temp[2][0],pos_temp[2][1],pos_temp[3][0],pos_temp[3][1],fac*100);//Display Data   
          continue;
        }//Correct
        //Calculation results
        tp_dev.xfac=(float)(lcddev.width-40)/(pos_temp[1][0]-pos_temp[0][0]);//Get xfac		 
        tp_dev.xoff=(lcddev.width-tp_dev.xfac*(pos_temp[1][0]+pos_temp[0][0]))/2;//Get xoff
        
        tp_dev.yfac=(float)(lcddev.height-40)/(pos_temp[2][1]-pos_temp[0][1]);//Get yfac
        tp_dev.yoff=(lcddev.height-tp_dev.yfac*(pos_temp[2][1]+pos_temp[0][1]))/2;//Get yoff  
        if(abs(tp_dev.xfac)>2||abs(tp_dev.yfac)>2)//The touch screen is the opposite of the preset.
        {
          cnt=0;
          TP_Drow_Touch_Point(lcddev.width-20,lcddev.height-20,WHITE);	//Clear point 4
          TP_Drow_Touch_Point(20,20,RED);								//Plot 1
          //LCD_ShowString(40,26, 16,"TP Need readjust!",1);
          tp_dev.touchtype=!tp_dev.touchtype;//Modify touch screen type.
          if(tp_dev.touchtype)//X,Y direction is opposite to screen
          {
            CMD_RDX=0X90;
            CMD_RDY=0XD0;	 
          }else				   //X,Y direction is the same as the screen
          {
            CMD_RDX=0XD0;
            CMD_RDY=0X90;	 
          }			    
          continue;
        }		
        POINT_COLOR=BLUE;
        LCD_Clear(WHITE);//Clear screen
        //LCD_ShowString(35,110, 16,"Touch Screen Adjust OK!",1);//Calibration completed
        delay_ms(1000);
        TP_Save_Adjdata();  
        LCD_Clear(WHITE);//Clear screen   
        return;//Calibration completed				 
      }
    }
    delay_ms(10);
    outtime++;
    if(outtime>1000)
    {
      TP_Get_Adjdata();
      break;
    } 
  }
}

u8 TP_Init(void)
{			    		   
  
  GPIO_InitTypeDef GPIO_Initure;	//GPIO
  __HAL_RCC_GPIOE_CLK_ENABLE();			//Turn on the GPIOH clock
  __HAL_RCC_GPIOA_CLK_ENABLE();			//Turn on the GPIOI clock
  
  //SCK
  GPIO_Initure.Pin=GPIO_PIN_1;            //PH6
  GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //Push-pull output
  GPIO_Initure.Pull=GPIO_PULLUP;          //pull up
  GPIO_Initure.Speed=GPIO_SPEED_FREQ_VERY_HIGH;     //high speed
  HAL_GPIO_Init(GPIOB,&GPIO_Initure);     //initialization
  
  //CS  MOSI
  GPIO_Initure.Pin=GPIO_PIN_5|GPIO_PIN_6; //PI3,8
  HAL_GPIO_Init(GPIOE,&GPIO_Initure);     //initialization
  
  //PEN
  GPIO_Initure.Pin=GPIO_PIN_6;            //PH7
  GPIO_Initure.Mode=GPIO_MODE_INPUT;      //enter
  HAL_GPIO_Init(GPIOA,&GPIO_Initure);     //initialization
  
  //PG3
  GPIO_Initure.Pin=GPIO_PIN_4;            //PG3
  HAL_GPIO_Init(GPIOE,&GPIO_Initure);     //initialization
  
  TP_Read_XY(&tp_dev.x,&tp_dev.y);//First read initialization	 
  if(TP_Get_Adjdata())return 0;//Already calibrated
  else			   //Not calibrated?
  { 										    
    LCD_Clear(WHITE);//Clear screen
    TP_Adjust();  //Screen calibration 
    TP_Save_Adjdata();	 
  }			
  TP_Get_Adjdata();	
  return 1; 									 
}
